slightly update profile page

--- a/app/templates/user/profile.twig
+++ b/app/templates/user/profile.twig
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
 	<div class="page-header">
-		<h1>{{ title }} <small>{% if administrator %}{% trans %}Administrator{% endtrans %}{% elseif moderator %}{% trans %}Moderator{% endtrans %}{% else %}{% trans %}User{% endtrans %}{% endif %}</small></h1>
+		<h1>{{ title }} <small>{% if administrator %}{% trans %}Administrator{% endtrans %}{% elseif moderator %}{% trans %}Moderator{% endtrans %}{% endif %}</small></h1>
 	</div>
 	<div class="row">
 		<div class="col-md-4">
@@ -39,7 +39,7 @@
 		{% endif %}
 		{% if clonkforge or github %}
 			<div>
-				<h3>{% trans %}Profiles{% endtrans %}</h3>
+				<h3>{% trans %}Links{% endtrans %}</h3>
 				<ul>
 				{% if clonkforge %}<li><a href="{{clonkforge.url}}">{{clonkforge.profile}}</a></li>{% endif %}
 				{% if github %}<li><a href="{{github.url}}">{{github.profile}}</a></li>{% endif %}
