--- a/app/templates/site/front.twig
+++ b/app/templates/site/front.twig
@@ -35,26 +35,11 @@
 					<span class="glyphicon glyphicon-chevron-right"></span>
 				</a>
 			</div>
-			<h3><span class="hidden-xs">{% trans %}New releases on Lorry{% endtrans %}</span><span class="visible-xs">{% trans %}New releases{% endtrans %}</span></h3>
+			<h3>Latest releases</h3>
 		{% if new_addons %}
 			<ul class="media-list addons-small">
 			{% for addon in new_addons %}
-				<li class="media">
-					<div class="pull-left">
-						<a href="{{base}}/addons/{{addon.game.short}}/{{addon.short}}"><img class="media-object" src="http://placehold.it/200x150"></a>
-					</div>
-					<div class="media-body">
-						<h4 class="media-heading heading-label"><a href="{{base}}/addons/{{addon.game.short}}/{{addon.short}}/{{addon.version}}">{{ addon.title }}{% if addon.version %} v{{addon.version}}{% endif %}</a></h4>
-						<a href="{{base}}/addons/{{addon.game.short}}" class="label label-game label-{{addon.game.short}}">{{addon.game.title}}</a>
-						<p class="hidden-phone">
-							{% if addon.description %}
-								{{addon.description}}
-							{% else %}
-							<em>{% trans %}This addon has no description.{% endtrans %}</em>
-							{% endif %}
-						</p>
-					</div>
-				</li>
+				{% include "functions/addon.twig" %}
 			{% endfor %}
 			</ul>
 		{% else %}
