--- a/app/templates/user/profile.twig
+++ b/app/templates/user/profile.twig
@@ -3,7 +3,17 @@
 {% block content %}
 <div class="container">
 	<div class="page-header">
-		<h1>{{ title }} <small>{% if administrator %}{% trans %}Administrator{% endtrans %}{% elseif moderator %}{% trans %}Moderator{% endtrans %}{% endif %}</small></h1>
+		<h1>{{ title }}
+			{% if administrator or moderator or banned %}
+			<small>
+				{% if administrator %}<span class="label label-success">{% trans %}Administrator{% endtrans %}</span>
+				{% elseif moderator %}<span class="label label-primary">{% trans %}Moderator{% endtrans %}</span>
+				{% endif %}
+				{% if banned %}<span class="label label-danger">{% trans %}Banned{% endtrans %}</span>
+				{% endif %}
+			</small>
+			{% endif %}
+		</h1>
 	</div>
 	<div class="row">
 		<div class="col-md-4">
