--- a/app/templates/user/edit.twig
+++ b/app/templates/user/edit.twig
@@ -16,7 +16,7 @@
 						<div class="form-group">
 							<div class="form-group">
 								<label for="username">{% trans "Username" %}</label>
-								<input type="text" class="form-control" name="username" id="username" value="{{username}}" required>
+								<input type="text" class="form-control" name="username" id="username" value="{{username_edit}}" required>
 							</div>
 							<div class="form-group">
 								<button type="submit" class="btn btn-default">{% trans "Change username" %}</button>
