--- a/app/templates/email/base.twig
+++ b/app/templates/email/base.twig
@@ -3,5 +3,6 @@
 {% block body %}
 <p>{% trans %}No content available.{% endtrans %}</p>
 {% endblock %}
---<br>
-{% trans %}Sent by {{brand}}{% endtrans %}
+--
+<p>{% trans %}Sent by {{brand}}{% endtrans %}<br>
+<a href="{{base}}">{{base}}</a></p>
