add addon creation page to publishing portal

--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -3,10 +3,11 @@
 {% set title = 'Publish'|trans %}
 
 {% block content %}
-<!--<div class="container">
+<div class="container">
 	<div class="page-header">
 		<h1>{{ title }}</h1>
 	</div>
+{% if addons %}
 	<div class="row">
 		<div class="col-md-12">
 			<h2>{% trans %}New addon{% endtrans %}</h2>
@@ -75,19 +76,14 @@
 		{% endif %}
 		</div>
 	</div>
-</div>!-->
-<div class="container">
-	<div class="page-header">
-		<h1>{{ title }}</h1>
-	</div>
+{% else %}
 </div>
 <div class="jumbotron">
 	<div class="container">
 		<h2>{% trans %}Welcome to the publishing portal!{% endtrans %}</h2>
 		<p>{% trans %}Here you can publish your addons and make them available to your fans. Click the button below to get started.{% endtrans %}</p>
-		<p><a href="#" class="btn btn-success">{% trans %}Create a new addon{% endtrans %}</a></p>
+		<p><a href="{{filename}}/create" class="btn btn-success">{% trans %}Create a new addon{% endtrans %}</a></p>
 	</div>
-</div>
-<div class="container">
+{% endif %}
 </div>
 {% endblock %}
