updated about page

--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -39,35 +39,39 @@
 			<dl>
 				<dt><a href="http://php.net">PHP</a></dt>
 				<dd>by the <a href="http://php.net/credits.php">PHP Group</a>,</dd>
-				<dt><a href="http://twig.sensiolabs.org">Twig</a></dt>
+				<dt><a href="http://twig.sensiolabs.org">Twig</a> <span class="text-muted">(templating)</span></dt>
 				<dd>by <a href="http://fabien.potencier.org/">Fabien Potencier</a> and <a href="http://sensiolabs.com/">SensioLabs</a>,</dd>
-				<dt><a href="http://lesscss.org/">Less</a></dt>
+				<dt><a href="http://swiftmailer.org/">Swift Mailer</a> <span class="text-muted">(mailing)</span></dt>
+				<dd>by Chris Corbyn, maintained by Fabien Potencier,</dd>
+				<dt><a href="http://lesscss.org/">Less</a> <span class="text-muted">(styling)</span></dt>
 				<dd>by <a href="https://github.com/cloudhead">Alexis Sellier</a> and <a href="http://lesscss.org/about/#team">contributors</a>,</dd>
-				<dt><a href="http://getbootstrap.com">Bootstrap</a></dt>
-				<dd>by <a href="http://twitter.com/mda">@mda</a>, <a href="http://twitter.com/fat">@fat</a> and <a href="https://github.com/twbs/bootstrap/graphs/contributors">contributors</a>.</dd>
+				<dt><a href="https://code.google.com/p/lightopenid/">LightOpenID</a> / <a href="http://lesscss.org/">OAuth 2.0 Client</a></dt>
+				<dd>by <a href="https://code.google.com/u/103055401176250561450/">lightopenid author</a> / <a href="http://thephpleague.com/">the PHP League</a>.</dd>
 			</dl>
 		</div>
 		<div class="col-md-4">
 			<hr class="visible-xs">
 			<h3>{% trans "Resources" %}</h3>
 			<dl>
-				<dt><a href="http://subtlepatterns.com/debut-light/">Debut Light</a>  <span class="text-muted">(background)</span></dt>
-				<dd>by <a href="http://lukemcdonald.com/">Luke McDonald</a> via <a href="http://subtlepatterns.com/">Subtle Patterns</a>,</dd>
+				<dt><a href="http://getbootstrap.com">Bootstrap</a></dt>
+				<dd>by <a href="http://twitter.com/mda">@mda</a>, <a href="http://twitter.com/fat">@fat</a> and <a href="https://github.com/twbs/bootstrap/graphs/contributors">contributors</a>,</dd>
 				<dt><a href="http://www.clonk.de/cr.php?lng={% trans "en" %}">Clonk Rage logo</a></dt>
 				<dd>with <a href="http://www.clonk.de/forum/en/topic_show.pl?pid=11760#pid11760">friendly permission</a> from <a href="http://www.clonk.de/redwolf.php?lng={% trans "en" %}">RedWolfDesign</a>,</dd>
 				<dt><a href="http://git.openclonk.org/openclonk-resources.git/blob/HEAD:/graphics/OpenClonkLogo.xcf">OpenClonk logo</a></dt>
-				<dd>by "<a href="http://forum.openclonk.org/user_info.pl?uid=37">MrBeast</a>" at <a href="http://openclonk.org/">openclonk.org</a>.</dd>
+				<dd>by "<a href="http://forum.openclonk.org/user_info.pl?uid=37">MrBeast</a>" at <a href="http://openclonk.org/">openclonk.org</a>,</dd>
+				<dt><a href="http://subtlepatterns.com/debut-light/">Debut Light</a>  <span class="text-muted">(background)</span></dt>
+				<dd>by <a href="http://lukemcdonald.com/">Luke McDonald</a> via <a href="http://subtlepatterns.com/">Subtle Patterns</a>.</dd>
 			</dl>
 		</div>
 		<div class="col-md-4">
 			<hr class="visible-xs">
 			<h3>{% trans "People" %}</h3>
 			<dl>
-				<dt><a href="http://clonkspot.org/">Clonkspot community</a></dt>
-				<dd>{% trans %}early feedback and thoughts{% endtrans %},</dd>
+				<dt><a href="http://clonkspot.org/">{% trans %}Clonkspot community{% endtrans %}</a></dt>
+				<dd>{% trans %}feedback and thoughts{% endtrans %},</dd>
 				<br>
 				<div class="head">
-					<dt><a href="https://beheh.de"><img src="{{resources}}/lorry/img/benedict.png" class="img-circle">Benedict Etzel</a> <span class="text-muted">(<a href="{{base}}/users/B_E" class="text-muted">B_E</a>)</span></dt>
+					<dt><a href="https://beheh.de"><img src="{{resources}}/lorry/img/benedict.png" class="img-circle">Benedict Etzel</a> <span class="text-muted">/ <a href="{{base}}/users/B_E" class="text-muted">B_E</a></span></dt>
 					<dd>{% trans %}idea & development{% endtrans %}.</dd>
 				</div>
 			</dl>
