--- a/app/templates/user/edit.twig
+++ b/app/templates/user/edit.twig
@@ -11,7 +11,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					{% include 'functions/alert.twig' with {'selector' : 'username'} %}
-					<form role=form" method="post" action="{{filename}}?change-appearance">
+					<form role=form" method="post" action="{{filename}}?change-username">
 						<input type="hidden" name="state" value="{{state}}">
 						<div class="form-group">
 							<div class="form-group">
@@ -25,7 +25,7 @@
 					</form>
 				</div>
 				<div class="col-md-6">
-		{% include 'functions/alert.twig' with {'selector' : 'contact'} %}
+					{% include 'functions/alert.twig' with {'selector' : 'contact'} %}
 					<form role=form" method="post" action="{{filename}}?change-contact">
 						<input type="hidden" name="state" value="{{state}}">
 						<div class="form-group">
