reworked mailing system

--- a/app/templates/email/feedback.twig
+++ b/app/templates/email/feedback.twig
@@ -3,7 +3,7 @@
 {% block subject %}{% trans %}{{brand}} site feedback{% endtrans %}{% endblock %}
 
 {% block body %}
-<p>Feedback sent by {{user}}:</p>
+<p>Feedback sent by {{sender}}:</p>
 
 <blockquote>
 	<p>"{{feedback}}"</p>
