add username to activation message of emails

--- a/app/templates/email/activate.twig
+++ b/app/templates/email/activate.twig
@@ -5,7 +5,7 @@
 {% set url = '<a href="' ~ url ~ '">' ~ url ~ '</a>' %}
 
 {% block body %}
-<p>{% trans %}You requested your email address for the account {{user}} to be changed to {{email}}.{% endtrans %}</p>
+<p>{% trans %}You requested your email address for the account {{username}} to be changed to {{email}}.{% endtrans %}</p>
 
 <p>{% trans %}In order to fully use your account you need to activate this new email address.{% endtrans %}<br>
 {% trans %}Please open {{url}} to activate your address.{% endtrans %}</p>
