all textareas now can only be resized vertically

--- a/web/resources/lorry/css/lorry.css
+++ b/web/resources/lorry/css/lorry.css
@@ -72,7 +72,7 @@ dt {
 .media-heading + .badge {
   vertical-align: text-bottom;
 }
-.contact-form {
+textarea {
   resize: vertical;
 }
 .btn-google {
