--- a/app/templates/publish/create.twig
+++ b/app/templates/publish/create.twig
@@ -46,7 +46,7 @@
 		</div>
 		<div class="form-group">
 			<button type="submit" class="btn btn-success">{% trans "Create addon" %}</button>
-			<a href="{{base}}/publish" class="btn btn-default">{% trans "Cancel" %}</a>
+			<a href="{{base}}/publish" class="btn btn-default">{% trans "Back" %}</a>
 		</div>
 	</form>
 </div>
