update prompts to create a new addon the current game

--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -7,12 +7,15 @@
 		<div class="clearfix"></div>
 	</div>
 {% if addons %}
-	<p class="sort-bar">{% trans %}Sort{% endtrans %}
-		<a href="{{filename}}?sort=date{% if sort == 'date' and not reverse %}&reverse=1{% endif %}">{% trans %}by date{% endtrans %}</a>{% if sort == 'date' %} {% if reverse%}▲{% else %}▼{% endif %}{% endif %} |
-		<a href="{{filename}}?sort=title{% if sort == 'title' and not reverse %}&reverse=1{% endif %}">{% trans %}by name{% endtrans %}</a>{% if sort == 'title' %} {% if reverse%}▲{% else %}▼{% endif %}{% endif %} |
-		<a href="{{filename}}?sort=rating{% if sort == 'rating' and not reverse %}&reverse=1{% endif %}">{% trans %}by rating{% endtrans %}</a>{% if sort == 'rating' %} {% if reverse%}▲{% else %}▼{% endif %}{% endif %}
-		or <a href="{{base}}/publish/?for={{short}}">create a new addon</a> for this game.
-	</p>
+	{% set columns %}
+	<a href="{{filename}}?sort=date{% if sort == 'date' and not reverse %}&reverse=1{% endif %}">{% trans %}by date{% endtrans %}</a>{% if sort == 'date' %} {% if reverse%}▲{% else %}▼{% endif %}{% endif %} |
+	<a href="{{filename}}?sort=title{% if sort == 'title' and not reverse %}&reverse=1{% endif %}">{% trans %}by name{% endtrans %}</a>{% if sort == 'title' %} {% if reverse%}▲{% else %}▼{% endif %}{% endif %} |
+	<a href="{{filename}}?sort=rating{% if sort == 'rating' and not reverse %}&reverse=1{% endif %}">{% trans %}by rating{% endtrans %}</a>{% if sort == 'rating' %} {% if reverse%}▲{% else %}▼{% endif %}{% endif %}
+	{% endset %}
+	{% set createaddon %}
+	<a href="{{base}}/publish/create?for={{short}}">{% trans %}create a new addon{% endtrans %}</a>
+	{% endset %}
+	<p class="sort-bar">{% trans %}Sort by {{columns}} or {{createaddon}} for this game.{% endtrans %}	</p>
 	<ul class="media-list addons">
 	{% for addon in addons %}
 		{% include "functions/addon.twig" %}
@@ -25,7 +28,12 @@
 		<a href="#"><img src="{{resources}}/custom/game/{{short}}.png" class="pull-right jumbo-image hidden-xs"></a>
 		<h1>{% trans %}No addons available{% endtrans %}</h1>
 		<p>{% trans %}There are no addons available for this game yet.{% endtrans %}</p>
-		{% if user_login %}<p><a href="{{base}}/publish" class="btn btn-info">{% trans %}Visit the publishing portal{% endtrans %}</a></p>{% endif %}
+		{% if user_login %}
+		<p>
+			<a href="{{base}}/publish" class="btn btn-info">{% trans %}Visit the publishing portal{% endtrans %}</a>
+			<a href="{{base}}/publish/create?for={{short}}" class="btn btn-default">{% trans %}New {{game}} addon{% endtrans %}</a>
+		</p>
+		{% endif %}
 {% endif %}
 	</div>
 </div>
