update addon media objects

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -94,6 +94,11 @@ textarea {
 	resize: vertical;
 }
 
+.media-addon img {
+	width: 76px;
+	height: 57px;
+}
+
 @import 'buttons.less';
 
 /* IE fixes */
