align multiple badges in media-addon after heading

--- a/web/resources/lorry/css/lorry.css
+++ b/web/resources/lorry/css/lorry.css
@@ -69,7 +69,7 @@ dt {
 .media-heading {
   display: inline-block;
 }
-.media-heading + .badge {
+.media .badge {
   vertical-align: text-bottom;
 }
 textarea {
