--- a/web/resources/lorry/css/lorry.css
+++ b/web/resources/lorry/css/lorry.css
@@ -79,6 +79,9 @@ textarea {
   width: 76px;
   height: 57px;
 }
+h1 small .label {
+  vertical-align: text-top;
+}
 .btn-google {
   color: #ffffff;
   background-color: #dd4b39;
