--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -99,6 +99,10 @@ textarea {
 	height: 57px;
 }
 
+.media-addon:first-child {
+	margin-top: 15px;
+}
+
 h1 small .label {
 	vertical-align: text-top;
 }
