make model getValue and setValue protected

--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -26,7 +26,7 @@
 		</div>
 		{% endblock %}
 		<div class="container">
-			<footer>
+			<footer class="footer">
 				<p class="visible-xs">&uarr; <a href="#">{% trans %}Back to top{% endtrans %}</a></p>
 				<p><a class="text" href="{{base}}">{{brand}}</a> {{site_copyright}} · <a class="text" href="{{base}}/about">{% trans "About us" %}</a> · <a class="text" href="{{base}}/contact">{% trans "Contact" %}</a></p>
 			</footer>
