--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -107,6 +107,13 @@ h1 small .label {
 	vertical-align: text-top;
 }
 
+.tab-pane {
+	background-color: white;
+	border: 1px solid #ddd;
+	padding: 20px 20px 5px 20px;
+	margin-top: -1px;
+}
+
 @import 'buttons.less';
 
 /* IE fixes */
