--- a/app/templates/publish/edit.twig
+++ b/app/templates/publish/edit.twig
@@ -3,106 +3,122 @@
 {% block content %}
 <div class="container">
 	<div class="page-header">
-		<h1>{{ title }} <small><span class="label label-default">Unveröffentlicht</span></small></h1>
+		<h1>{{ title }}</h1>
 	</div>
-	<ul class="nav nav-tabs" id="editAddonTabs" style="margin-bottom: 20px;">
-		<li class="active"><a href="#presentation" data-toggle="tab">{% trans "Presentation" %}</a></li>
-		<li><a href="#files" data-toggle="tab">{% trans "Files" %}</a></li>
-		<li><a href="#dependencies" data-toggle="tab">{% trans "Dependencies" %}</a></li>
-		<li><a href="#tags" data-toggle="tab">{% trans "Tags" %}</a></li>
-		<li><a href="#release" data-toggle="tab">{% trans "Release" %}</a></li>
+	<ul class="nav nav-tabs" id="editAddonTabs">
+		<li class="active"><a href="#addon" data-toggle="tab">{% trans "Addon" %}</a></li>
+		<li><a href="#presentation" data-toggle="tab">{% trans "Presentation" %}</a></li>
+		<li><a href="#releases" data-toggle="tab">{% trans "Releases" %}</a></li>
 	</ul>
 	<div class="tab-content">
-		<div class="tab-pane active" id="presentation">
+		<div class="tab-pane active" id="addon">
 			<form role=form" method="post" action="{{filename}}">
+				<input type="hidden" name="state" value="{{state}}">
 				<div class="row">
 					<div class="col-md-4">
-						<input type="hidden" name="state" value="{{state}}">
 						<div class="form-group">
-							<label for="title">Titel</label>
-							<input type="text" class="form-control" name="title" id="title" value="" required>
+							<label for="title">{%trans "Title" %}</label>
+							<input type="text" class="form-control" name="title" id="title" value="{{addontitle}}" required>
 						</div>
 						<div class="form-group">
-							<label for="type">Typ</label>
+							<label for="type">{%trans "Game" %}</label>
+							<select name="type" class="form-control" id="type" required>
+								{% for short, currentgame in games %}
+								<option value="{{short}}"{% if short == game %} selected{% endif %}>{{currentgame.title}}</option>
+								{% endfor %}
+							</select>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="form-group">
+							<label for="title">{%trans "Abbreviation (if exists)" %}</label>
+							<input type="text" class="form-control" name="abbreviation" id="title" value="{{abbreviation}}">
+						</div>
+						<div class="form-group">
+							<label for="type">{%trans "Type" %}</label>
 							<select name="type" class="form-control" id="type" required>
 								<option value="123">Runde</option>
 								<option value="312">Objektpaket</option>
 							</select>
 						</div>
-						<div class="form-group">
-							<label for="type">Spiel</label>
-							<select name="type" class="form-control" id="type" required>
-								<option value="123">Clonk Rage</option>
-								<option value="312">OpenClonk</option>
-							</select>
-						</div>
-						<div class="form-group">
-							<button type="submit" class="btn btn-primary">Speichern</button>
-						</div>
 					</div>
-					<div class="col-md-8">
-						<div class="form-group">
-							<label for="game">Beschreibung</label>
-							<div class="form-group">
-								<textarea class="form-control" name="description" rows="10" required=""></textarea>
-							</div>
-						</div>
-					</div>
+				</div>
+				<div class="form-group">
+					<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 				</div>
 			</form>
-		</div>
-
-		<div class="tab-pane" id="tags">
-			<form role=form" method="post" action="{{filename}}">
-				<div class="row">
-					<div class="col-md-4">
-						<input type="hidden" name="state" value="{{state}}">
-						<div class="form-group">
-							<label for="type">Spielziel</label>
-							<select name="type" class="form-control" id="type" required>
-								<option value="" disabled selected>{% trans "Choose&hellip;"%}</option>
-								<option value="123">Abenteuer / Kooperativ</option>
-								<option value="312">Wettrennen</option>
-								<option value="312">Melee</option>
-							</select>
-						</div>
-						<div class="form-group">
-							<label for="type">Spielerzahl</label>
-							<select name="type" class="form-control" id="type" required>
-								<option value="" disabled selected>{% trans "Choose&hellip;"%}</option>
-								<option value="123">Einzeln</option>
-								<option value="312">Wenige</option>
-								<option value="312">Mehrere</option>
-							</select>
-						</div>
-						<div class="form-group">
-							<button type="submit" class="btn btn-primary">Speichern</button>
-						</div>
-					</div>
-				</div>
-			</form>
-		</div>
-
-		<div class="tab-pane" id="files">
-			<div class="row">
-				<div class="col-md-8">
-					<div class="form-group">
-						<label for="game">Dateien</label>
-					</div>
-				</div>
-			</div>
 		</div>
 
 		<div class="tab-pane" id="dependencies">
-			<div class="row">
-
-			</div>
+			<form role=form" method="post" action="{{filename}}">
+				<div class="row">
+					<div class="col-md-4">
+						<div class="form-group">
+							<label for="depencencies">{% trans %}Dependencies{% endtrans %}</label>
+						</div>
+					</div>
+				</div>
+			</form>
 		</div>
 
-		<div class="tab-pane" id="release">
-			<div class="row">
+		<div class="tab-pane" id="presentation">
+			<form role=form" method="post" action="{{filename}}">
+				<div class="row">
+					<div class="col-md-8">
+						<div class="form-group">
+							<label for="description">{% trans "Description "%}</label>
+							<div class="form-group">
+								<textarea class="form-control" id="description" name="description" rows="10" required=""></textarea>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<input type="hidden" name="state" value="{{state}}">
+						<div class="form-group">
+							<label for="type">{% trans "Player count" %}</label>
+							<select name="type" class="form-control" id="type" required>
+								<option value="" disabled selected>{% trans "Choose&hellip;"%}</option>
+							</select>
+						</div>
+						<div class="form-group">
+							<label for="type">{% trans "Goal" %}</label>
+							<select name="type" class="form-control" id="type" required>
+								<option value="" disabled selected>{% trans "Choose&hellip;"%}</option>
+							</select>
+						</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+				</div>
+			</form>
+		</div>
 
+		<div class="tab-pane" id="releases">
+			<div class="row">
+				<div class="col-md-12">
+					<form role=form" class="form-inline" method="post" action="{{filename}}#releases">
+						<div class="form-group">
+							<label class="sr-only" for="version	">{% trans "Version"%}</label>
+							<input type="text" class="form-control" id="version" placeholder="{% trans "Version"%}"{% if focus_release %} autofocus{% endif %}>
+						</div>
+						<button type="submit" class="btn btn-success">{% trans %}Add release{% endtrans %}</button>
+					</form>
+					<p></p>
+					<ul class="list-group">
+						{% for release in releases %}
+						<li class="list-group-item">
+							<a href="#">{{release}}</a>
+							<button type="button" class="close" title="{% trans "Remove" %}" aria-hidden="true">&times;</button>
+						</li>
+						{% else %}
+						<li class="list-group-item text-muted">{% trans %}No release created{% endtrans %}</li>
+						{% endfor %}
+					</ul>
+				</div>
 			</div>
+			</form>
 		</div>
 	</div>
+</div>
 {% endblock %}
