--- a/app/templates/user/edit.twig
+++ b/app/templates/user/edit.twig
@@ -34,7 +34,7 @@
 						</div>
 						<div class="checkbox">
 							<label>
-								<input type="checkbox" name="require-activation" value="yes"{% if require_activation %} checked{% endif %}> {% trans %}Require user activation{% endtrans %}
+								<input type="checkbox" name="require-activation" value="yes"{% if require_activation %} checked{% endif %}> {% trans %}Email address has to be activated{% endtrans %}
 							</label>
 						</div>
 						<div class="form-group">
