--- a/app/templates/publish/edit.twig
+++ b/app/templates/publish/edit.twig
@@ -12,7 +12,8 @@
 	</ul>
 	<div class="tab-content">
 		<div class="tab-pane active" id="addon">
-			<form role=form" method="post" action="{{filename}}">
+			<form role=form" method="post" action="{{filename}}?addon#addon">
+				{% include 'functions/alert.twig' with {'selector' : 'addon'} %}
 				<input type="hidden" name="state" value="{{state}}">
 				<div class="row">
 					<div class="col-md-4">
@@ -22,7 +23,7 @@
 						</div>
 						<div class="form-group">
 							<label for="type">{%trans "Game" %}</label>
-							<select name="type" class="form-control" id="type" required>
+							<select name="game" class="form-control" id="type" required>
 								{% for short, currentgame in games %}
 								<option value="{{short}}"{% if short == game %} selected{% endif %}>{{currentgame.title}}</option>
 								{% endfor %}
